Solved propbem with unvisible color picker

--- a/src/pages/CategoryForm/CategoryForm.module.scss
+++ b/src/pages/CategoryForm/CategoryForm.module.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 206px;
-  width: 262px;
+  min-height: 340px;
+  width: 300px;
+  justify-content: space-around;
   .title {
     text-align: center;
     width: 100%;
